filter: employees by status or rol 2.1