@@ -1,8 +1,6 @@
 package com.employee_service.service.daoImpl;
 
-import com.employee_service.dto.request.CreateEmployeeRequest;
-import com.employee_service.dto.request.FilterEmployeeRequest;
-import com.employee_service.dto.request.UpdateEmployeeRequest;
+import com.employee_service.dto.request.*;
 import com.employee_service.dto.response.EmployeeResponse;
 import com.employee_service.model.Employee;
 import com.employee_service.repository.EmployeeRepository;
@@ -10,11 +8,8 @@ import com.employee_service.service.dao.EmployeeService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
-
 import jakarta.persistence.criteria.Predicate;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.stream.Collectors;
+import java.util.*;
 
 @Service
 @RequiredArgsConstructor
@@ -28,30 +23,31 @@ public class EmployeeServiceImpl implements EmployeeService {
             throw new RuntimeException("Email already in use");
         }
 
-        Employee employee = new Employee();
-        employee.setFirstName(request.getFirstName());
-        employee.setLastName(request.getLastName());
-        employee.setEmail(request.getEmail());
-        employee.setPhoneNumber(request.getPhoneNumber());
-        employee.setHireDate(request.getHireDate());
-        employee.setStatus(request.getStatus());
+        Employee employee = Employee.builder()
+                .firstName(request.getFirstName())
+                .lastName(request.getLastName())
+                .email(request.getEmail())
+                .phoneNumber(request.getPhoneNumber())
+                .hireDate(request.getHireDate())
+                .status(request.getStatus())
+                .build();
 
-        Employee savedEmployee = employeeRepository.save(employee);
-        return mapToResponse(savedEmployee);
+        return EmployeeResponse.fromEntity(employeeRepository.save(employee));
     }
 
     @Override
     public EmployeeResponse getEmployeeById(Long id) {
-        Employee employee = employeeRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Employee not found"));
-        return mapToResponse(employee);
+        return EmployeeResponse.fromEntity(
+                employeeRepository.findById(id)
+                        .orElseThrow(() -> new RuntimeException("Employee not found"))
+        );
     }
 
     @Override
     public List<EmployeeResponse> getAllEmployees() {
         return employeeRepository.findAll().stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .map(EmployeeResponse::fromEntity)
+                .toList();
     }
 
     @Override
@@ -60,13 +56,22 @@ public class EmployeeServiceImpl implements EmployeeService {
             List<Predicate> predicates = new ArrayList<>();
 
             if (filter.getFirstName() != null) {
-                predicates.add(cb.like(root.get("firstName"), "%" + filter.getFirstName() + "%"));
+                predicates.add(cb.like(
+                        cb.lower(root.get("firstName")),
+                        "%" + filter.getFirstName().toLowerCase() + "%"
+                ));
             }
             if (filter.getLastName() != null) {
-                predicates.add(cb.like(root.get("lastName"), "%" + filter.getLastName() + "%"));
+                predicates.add(cb.like(
+                        cb.lower(root.get("lastName")),
+                        "%" + filter.getLastName().toLowerCase() + "%"
+                ));
             }
             if (filter.getEmail() != null) {
-                predicates.add(cb.like(root.get("email"), "%" + filter.getEmail() + "%"));
+                predicates.add(cb.like(
+                        cb.lower(root.get("email")),
+                        "%" + filter.getEmail().toLowerCase() + "%"
+                ));
             }
             if (filter.getStatus() != null) {
                 predicates.add(cb.equal(root.get("status"), filter.getStatus()));
@@ -76,8 +81,8 @@ public class EmployeeServiceImpl implements EmployeeService {
         };
 
         return employeeRepository.findAll(spec).stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .map(EmployeeResponse::fromEntity)
+                .toList();
     }
 
     @Override
@@ -85,30 +90,23 @@ public class EmployeeServiceImpl implements EmployeeService {
         Employee employee = employeeRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Employee not found"));
 
-        if (request.getFirstName() != null) {
-            employee.setFirstName(request.getFirstName());
-        }
-        if (request.getLastName() != null) {
-            employee.setLastName(request.getLastName());
-        }
-        if (request.getEmail() != null && !request.getEmail().equals(employee.getEmail())) {
-            if (employeeRepository.existsByEmail(request.getEmail())) {
-                throw new RuntimeException("Email already in use");
-            }
-            employee.setEmail(request.getEmail());
-        }
-        if (request.getPhoneNumber() != null) {
-            employee.setPhoneNumber(request.getPhoneNumber());
-        }
-        if (request.getHireDate() != null) {
-            employee.setHireDate(request.getHireDate());
-        }
-        if (request.getStatus() != null) {
-            employee.setStatus(request.getStatus());
-        }
+        Optional.ofNullable(request.getFirstName()).ifPresent(employee::setFirstName);
+        Optional.ofNullable(request.getLastName()).ifPresent(employee::setLastName);
 
-        Employee updatedEmployee = employeeRepository.save(employee);
-        return mapToResponse(updatedEmployee);
+        Optional.ofNullable(request.getEmail()).ifPresent(email -> {
+            if (!email.equals(employee.getEmail())) {
+                if (employeeRepository.existsByEmail(email)) {
+                    throw new RuntimeException("Email already in use");
+                }
+                employee.setEmail(email);
+            }
+        });
+
+        Optional.ofNullable(request.getPhoneNumber()).ifPresent(employee::setPhoneNumber);
+        Optional.ofNullable(request.getHireDate()).ifPresent(employee::setHireDate);
+        Optional.ofNullable(request.getStatus()).ifPresent(employee::setStatus);
+
+        return EmployeeResponse.fromEntity(employeeRepository.save(employee));
     }
 
     @Override
@@ -117,17 +115,5 @@ public class EmployeeServiceImpl implements EmployeeService {
             throw new RuntimeException("Employee not found");
         }
         employeeRepository.deleteById(id);
-    }
-
-    private EmployeeResponse mapToResponse(Employee employee) {
-        EmployeeResponse response = new EmployeeResponse();
-        response.setId(employee.getId());
-        response.setFirstName(employee.getFirstName());
-        response.setLastName(employee.getLastName());
-        response.setEmail(employee.getEmail());
-        response.setPhoneNumber(employee.getPhoneNumber());
-        response.setHireDate(employee.getHireDate());
-        response.setStatus(employee.getStatus());
-        return response;
     }
 }
